# miniKLEE

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: api_usage.md  juliet_benchmark.md  release_notes.md
include/: ast_parser.h  vuln_checker.h  z3_solver.h
src/: ast_parser.cpp  main.cpp  symbolic_state.cpp  vuln_checker.cpp  z3_solver.cpp
